--- a/bai1.html
+++ b/bai1.html
@@ -1,10 +1,11 @@
-<!DOCTYPE>
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
-
 <body>
     <h1>
         Viết dòng này bằng thẻ h1
@@ -92,5 +93,7 @@
             Viết dòng này bằng thẻ mark. Để thể hiện đoạn văn được đánh dấu</mark>
     </p>
 </body>
-
 </html>
+
+
+
